# node-fst-reader

./: .gitignore  .npmignore  README.md  binding.gyp  package-lock.json  package.json  tsconfig.json
.github/workflows/: build-and-test.yml
src/: FstFile.hpp  FstHierarchyBuilder.hpp  FstReader.ts  fst_reader.cpp  index.ts
test/: CMakeLists.txt  FstFileTest.cpp  FstReader.test.ts
